--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Работает ✅</h1>
+  <h1>>Юля привет ✅</h1>
   <script src="js/main.js"></script>
 </body>
 </html>
