Fix request button + stable Turnstile render

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,11 @@
         <input id="reqName" placeholder="Your nickname / handle (required)" required />
         <textarea id="reqMsg" placeholder="Message (optional)"></textarea>
 
-        <!-- Turnstile widget placeholder -->
-        <div id="tsBox" class="tsBox">
-          <div class="cf-turnstile" id="tsWidget"></div>
+        <!-- Turnstile widget (IMPORTANT: paste site key) -->
+        <div class="tsBox">
+          <div class="cf-turnstile"
+               data-sitekey="0x4AAAAAACW5TtAmWWLLFZ7V"
+               data-theme="dark"></div>
         </div>
 
         <!-- honeypot -->
