Refactor Turnstile integration and update test cases

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,7 @@
           <textarea id="reqMsg" placeholder="Message (optional)"></textarea>
 
           <div class="tsRow">
-            <div id="tsWidget"></div>
-            <div class="tsHint">Anti-spam check is required.</div>
+          <div class="cf-turnstile" data-sitekey="" data-theme="dark"></div>
           </div>
 
           <!-- honeypot -->
