Add postcard categories: filter on site, category in Telegram caption

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+      <div id="categoryFilter" class="category-filter" role="group" aria-label="Filter by category"></div>
       <div id="grid" class="grid"></div>
     </main>
 
