Add reservation workflow, analytics, and UX upgrades

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,13 @@
       <div id="grid" class="grid"></div>
     </main>
 
+    <div id="mobileCta" class="mobile-cta hidden" aria-hidden="true">
+      <div class="mobile-cta-text">
+        <span id="mobileCtaCount">0</span> selected
+      </div>
+      <button id="mobileOpenCart" type="button" class="btn primary">Send request</button>
+    </div>
+
     <div id="modal" class="modal hidden" aria-hidden="true">
       <div class="modal-inner">
         <button id="close" class="close" aria-label="Close">×</button>
